--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,11 @@ apply plugin: 'maven'
 sourceCompatibility = 1.8
 
 dependencies {
+
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
     compile group: 'io.swagger.parser.v3', name: 'swagger-parser', version: '2.0.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
+
 }
