--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,14 @@ apply plugin: 'maven'
 sourceCompatibility = 1.8
 
 dependencies {
+    compile group: 'org.springframework', name: 'spring-context', version: '5.1.1.RELEASE'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
     compile group: 'io.swagger.parser.v3', name: 'swagger-parser', version: '2.0.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
+    testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.1.RELEASE'
+
 
 }
