--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ dependencies {
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
     compile group: 'io.swagger.parser.v3', name: 'swagger-parser', version: '2.0.5'
-
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
     testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.1.RELEASE'
