--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile "io.swagger.parser.v3:swagger-parser:2.0.5"
     compile "ch.qos.logback:logback-core:1.2.3"
     compile "ch.qos.logback:logback-classic:1.2.3"
-
+    compile "com.fasterxml.jackson.core:jackson-databind:2.9.7"
 
     testCompile "junit:junit:4.12"
     testCompile "org.assertj:assertj-core:3.11.1"
