--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile "ch.qos.logback:logback-core:1.2.3"
     compile "ch.qos.logback:logback-classic:1.2.3"
     compile "com.fasterxml.jackson.core:jackson-databind:2.9.7"
+    compile "com.github.spullara.mustache.java:compiler:0.9.5"
+
 
     testCompile "junit:junit:4.12"
     testCompile "org.assertj:assertj-core:3.11.1"
