--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     testCompile "junit:junit:4.12"
     testCompile "org.assertj:assertj-core:3.11.1"
     testCompile "org.springframework:spring-test:5.1.1.RELEASE"
+    testCompile "org.mockito:mockito-core:2.23.0"
 }
 
 tasks.withType(Checkstyle) {
