Apply signing only when signing properties are available and apply uploadArchives when properties are set

--- a/build.gradle
+++ b/build.gradle
@@ -67,55 +67,51 @@ artifacts {
     archives javadocJar, sourcesJar
 }
 
-signing {
-    sign configurations.archives
+if (project.hasProperty('signing.keyId')) {
+    signing {
+        sign configurations.archives
+    }
 }
 
-if (!project.hasProperty('ossrhUsername')) {
-    ext.ossrhUsername = ''
-}
+if (project.hasProperty('ossrhUsername') && project.hasProperty('ossrhPassword')) {
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-if (!project.hasProperty('ossrhPassword')) {
-    ext.ossrhPassword = ''
-}
+                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                }
 
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'Swagger Brake'
-                packaging 'jar'
-                description 'Swagger contract checker for breaking API changes'
-                url 'https://github.com/redskap/swagger-brake'
-
-                scm {
-                    connection 'scm:git:git://github.com/redskap/swagger-brake.git'
-                    developerConnection 'scm:git:ssh://github.com:redskap/swagger-brake.git'
+                pom.project {
+                    name 'Swagger Brake'
+                    packaging 'jar'
+                    description 'Swagger contract checker for breaking API changes'
                     url 'https://github.com/redskap/swagger-brake'
-                }
 
-                licenses {
-                    license {
-                        name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    scm {
+                        connection 'scm:git:git://github.com/redskap/swagger-brake.git'
+                        developerConnection 'scm:git:ssh://github.com:redskap/swagger-brake.git'
+                        url 'https://github.com/redskap/swagger-brake'
                     }
-                }
 
-                developers {
-                    developer {
-                        id 'galovics'
-                        name 'Arnold Galovics'
-                        email 'info@arnoldgalovics.com'
+                    licenses {
+                        license {
+                            name 'The Apache License, Version 2.0'
+                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'galovics'
+                            name 'Arnold Galovics'
+                            email 'info@arnoldgalovics.com'
+                        }
                     }
                 }
             }
