--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile "ch.qos.logback:logback-classic:1.2.3"
     compile "com.fasterxml.jackson.core:jackson-databind:2.9.7"
     compile "com.github.spullara.mustache.java:compiler:0.9.5"
+    compile "org.apache.httpcomponents:httpclient:4.5.6"
 
 
     testCompile "junit:junit:4.12"
