--- a/swagger-brake-cli/build.gradle
+++ b/swagger-brake-cli/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 }
 
 jar {
-    enabled = false
+    enabled = true
     manifest {
         attributes 'Main-Class': 'io.redskap.swagger.brake.cli.SwaggerBrakeMain'
     }
