--- a/build.gradle
+++ b/build.gradle
@@ -52,4 +52,75 @@ subprojects {
             html.enabled true
         }
     }
+
+    //<editor-fold desc="Uploading to central">
+    apply plugin: 'signing'
+
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from javadoc
+    }
+
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    artifacts {
+        archives javadocJar, sourcesJar
+    }
+
+    if (project.hasProperty('signing.keyId')) {
+        signing {
+            sign configurations.archives
+        }
+    }
+
+    if (project.hasProperty('ossrhUsername') && project.hasProperty('ossrhPassword')) {
+        uploadArchives {
+            repositories {
+                mavenDeployer {
+                    beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+                    repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                        authentication(userName: ossrhUsername, password: ossrhPassword)
+                    }
+
+                    snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                        authentication(userName: ossrhUsername, password: ossrhPassword)
+                    }
+
+                    pom.project {
+                        name 'Swagger Brake'
+                        packaging 'jar'
+                        description 'Swagger contract checker for breaking API changes'
+                        url 'https://github.com/redskap/swagger-brake'
+
+                        scm {
+                            connection 'scm:git:git://github.com/redskap/swagger-brake.git'
+                            developerConnection 'scm:git:ssh://github.com:redskap/swagger-brake.git'
+                            url 'https://github.com/redskap/swagger-brake'
+                        }
+
+                        licenses {
+                            license {
+                                name 'The Apache License, Version 2.0'
+                                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                            }
+                        }
+
+                        developers {
+                            developer {
+                                id 'galovics'
+                                name 'Arnold Galovics'
+                                email 'info@arnoldgalovics.com'
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    //</editor-fold>
 }
+
