--- a/swagger-brake/src/test/resources/request/generalrequest/petstore.yaml
+++ b/swagger-brake/src/test/resources/request/generalrequest/petstore.yaml
@@ -50,10 +50,20 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Order"
+        204:
+          description: "succesful operation, no body"
+          schema:
+            $ref: "#/responses/successNoResponse"
         400:
           description: "Invalid ID supplied"
         404:
           description: "Order not found"
+
+responses:
+  successNoResponse:
+    #see https://swagger.io/docs/specification/describing-responses/  - Empty Response Body section
+    description: "204 - The request was successful. No response body will be returned."
+
 parameters:
   orderId:
     name: "orderId"
