--- a/swagger-brake/src/test/resources/swaggers/v3/request/requestbody/allof/propertydeleted/petstore_v2.yaml
+++ b/swagger-brake/src/test/resources/swaggers/v3/request/requestbody/allof/propertydeleted/petstore_v2.yaml
@@ -28,6 +28,8 @@ components:
     Dog:
       type: object
       properties:
+        id:
+          type: string
         breed:
           type: string
           enum: [Dingo, Husky, Retriever, Shepherd]
