--- a/swagger-brake/src/test/resources/swaggers/v3/request/requestbody/anyof/nobreakingchange/sameattribute/petstore.yaml
+++ b/swagger-brake/src/test/resources/swaggers/v3/request/requestbody/anyof/nobreakingchange/sameattribute/petstore.yaml
@@ -15,7 +15,7 @@ paths:
         content:
           application/json:
             schema:
-              allOf:
+              anyOf:
                 - $ref: '#/components/schemas/Pet'
                 - $ref: '#/components/schemas/Dog'
       tags:
@@ -29,7 +29,7 @@ components:
       type: object
       properties:
         id:
-          type: string
+          type: integer
         bark:
           type: integer
         breed:
@@ -39,6 +39,6 @@ components:
       type: object
       properties:
         id:
-          type: integer
+          type: string
         name:
           type: string
