--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-
-# Created by https://www.gitignore.io/api/java,maven,gradle,intellij
+node_modules/
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
