--- a/swagger-brake/build.gradle
+++ b/swagger-brake/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     repositories {
-        jcenter()
         mavenCentral()
     }
 }
@@ -11,10 +10,10 @@ repositories {
 
 
 dependencies {
-    compile "org.apache.commons:commons-collections4:4.4"
-    compile "io.swagger.parser.v3:swagger-parser:2.0.5"
-    compile "com.fasterxml.jackson.core:jackson-databind:2.13.4"
-    compile "com.github.spullara.mustache.java:compiler:0.9.10"
-    compile "org.apache.httpcomponents:httpclient:4.5.13"
+    implementation "org.apache.commons:commons-collections4:4.4"
+    implementation "io.swagger.parser.v3:swagger-parser:2.0.5"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.13.4"
+    implementation "com.github.spullara.mustache.java:compiler:0.9.10"
+    implementation "org.apache.httpcomponents:httpclient:4.5.13"
 }
 
