--- a/renovate.json
+++ b/renovate.json
@@ -32,6 +32,13 @@
         "ch.qos.logback:logback-classic"
       ],
       "allowedVersions": "<=1.2.11"
+    },
+    {
+      "matchPackageNames": [
+        "com.fasterxml.jackson.core:jackson-databind",
+        "com.fasterxml.jackson.dataformat:jackson-dataformat-xml"
+      ],
+      "allowedVersions": "<=2.13.4"
     }
   ]
 }
