--- a/swagger-brake-integration-tests/src/test/resources/example-projects/swagger-brake-maven-example/pom.xml
+++ b/swagger-brake-integration-tests/src/test/resources/example-projects/swagger-brake-maven-example/pom.xml
@@ -63,7 +63,7 @@
             <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
                 <artifactId>artifactory-maven-plugin</artifactId>
-                <version>2.6.1</version>
+                <version>3.6.1</version>
                 <inherited>false</inherited>
                 <executions>
                     <execution>
@@ -82,6 +82,20 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
             </plugin>
         </plugins>
     </build>
