--- a/swagger-brake/build.gradle
+++ b/swagger-brake/build.gradle
@@ -8,11 +8,21 @@ repositories {
     mavenCentral()
 }
 
-
 dependencies {
     implementation "org.apache.commons:commons-collections4:4.4"
     implementation "io.swagger.parser.v3:swagger-parser:2.0.5"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.13.4.2"
     implementation "com.github.spullara.mustache.java:compiler:0.9.11"
     implementation "org.apache.httpcomponents:httpclient:4.5.14"
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testRuntimeOnly  'org.junit.platform:junit-platform-launcher'
+}
+
+tasks.named('test', Test) {
+    useJUnitPlatform()
+
+    testLogging {
+        events "passed"
+    }
 }
